components/xr9yi07wv-nodejs/base/service.yaml
apiVersion: v1
kind: Service
metadata: 
  labels: 
    app.kubernetes.io/instance: xr9yi07wv-nodejs
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: xr9yi07wv-nodejs 
  name: xr9yi07wv-nodejs
spec:
  ports:
  - port: 3001 
    targetPort: 3001 
  selector:
    app.kubernetes.io/instance: xr9yi07wv-nodejs
