components/xr9yi07wv-nodejs/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata: 
  labels: 
    app.kubernetes.io/instance: xr9yi07wv-nodejs
    app.kubernetes.io/managed-by: kustomize
    app.kubernetes.io/name: xr9yi07wv-nodejs 
  name: xr9yi07wv-nodejs
spec:
  port:
    targetPort: 3001 
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: xr9yi07wv-nodejs
    weight: 100
